operands to a natural number using the function natify, making the algebraic
laws unconditional;

* as above, for int: operators coerce their operands to an integer using the
function intify;

* the integer library now contains many of the usual laws for the orderings, 
including $<=, and monotonicity laws for $+ and $*; 


*** FOL & ZF ***

* AddIffs now available, giving theorems of the form P<->Q to the
simplifier and classical reasoner simultaneously;


*** General ***

* blast(_tac) now handles actual object-logic rules as assumptions;
note that auto(_tac) uses blast(_tac) internally, too;

* AST translation rules no longer require constant head on LHS;

* improved name spaces: ambiguous output is qualified; support for
hiding of names;

* compression of ML heaps images may now be controlled via -c option
of isabelle and isatool usedir (currently only observed by Poly/ML);

* provide TAGS file for Isabelle sources;

* ML: infix 'OF' is a version of 'MRS' with more appropriate argument
order;

* ML: renamed flags Syntax.trace_norm_ast to Syntax.trace_ast; global
timing flag supersedes proof_timing and Toplevel.trace;

* ML: PureThy.add_defs gets additional argument to indicate potential
overloading (usually false);

* ML: new combinators |>> and |>>> for incremental transformations
with secondary results (e.g. certain theory extensions):



New in Isabelle99 (October 1999)
--------------------------------

*** Overview of INCOMPATIBILITIES (see below for more details) ***

* HOL: The THEN and ELSE parts of conditional expressions (if P then x else y)
are no longer simplified.  (This allows the simplifier to unfold recursive
functional programs.)  To restore the old behaviour, declare

    Delcongs [if_weak_cong];

* HOL: Removed the obsolete syntax "Compl A"; use -A for set
complement;

* HOL: the predicate "inj" is now defined by translation to "inj_on";

* HOL/datatype: mutual_induct_tac no longer exists --